# SteamFirewallBlocker

./: CMakeLists.txt  README.md  build.bat
.github/scripts/: compute-version.ps1  generate-release-notes.ps1
.github/workflows/: release.yml
src/: app.manifest  config.cpp  config.h  firewall.cpp  firewall.h  hotkey.cpp  hotkey.h  main.cpp  resource.h  resource.rc
